delete and re-generate strm clicking on webui; force edit text file in webui
